2016-02-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0

	* src/Makefile.am: Add test case if module is loadable.

2016-02-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/nss-nisplus.h: Add prototypes for glibc/libnsl internal
	functions.

	* src/Makefile.am: Add nss-nisplus.h, nss-nisplus.c.
	* src/nisplus-alias.c: Remove glibc internal.
	* src/nisplus-ether.c: Likewise.
	* src/nisplus-grp.c: Likewise.

2015-07-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* Initial import from glibc