@@ -437,7 +437,7 @@ internal_gethostbyname2_r (const char *name, int af, struct hostent *host,
     }
 
   int retval = niserr2nss (result->status);
-  if (__glibc_unlikely (retval != NSS_STATUS_SUCCESS))
+  if (retval != NSS_STATUS_SUCCESS)
     {
       if (retval == NSS_STATUS_TRYAGAIN)
 	{
@@ -541,7 +541,7 @@ _nss_nisplus_gethostbyaddr_r (const void *addr, socklen_t addrlen, int af,
     }
 
   retval = niserr2nss (result->status);
-  if (__glibc_unlikely (retval != NSS_STATUS_SUCCESS))
+  if (retval != NSS_STATUS_SUCCESS)
     {
       if (retval == NSS_STATUS_TRYAGAIN)
 	{
@@ -585,7 +585,7 @@ _nss_nisplus_gethostbyname4_r (const char *name, struct gaih_addrtuple **pat,
   enum nss_status status = internal_gethostbyname2_r (name, AF_UNSPEC, &host,
 						      buffer, buflen,
 						      errnop, herrnop, 0);
-  if (__glibc_likely (status == NSS_STATUS_SUCCESS))
+  if (status == NSS_STATUS_SUCCESS)
     {
       if (*pat == NULL)
 	{
@@ -594,7 +594,7 @@ _nss_nisplus_gethostbyname4_r (const char *name, struct gaih_addrtuple **pat,
 	  buffer += pad;
 	  buflen = buflen > pad ? buflen - pad : 0;
 
-	  if (__glibc_unlikely (buflen < sizeof (struct gaih_addrtuple)))
+	  if (buflen < sizeof (struct gaih_addrtuple))
 	    {
 	      free (result);
 	      *errnop = ERANGE;
