@@ -256,7 +256,7 @@ internal_nisplus_getservent_r (struct servent *serv, char *buffer,
 
       parse_res = _nss_nisplus_parse_servent (result, serv, buffer,
 					      buflen, errnop);
-      if (__glibc_unlikely (parse_res == -1))
+      if (parse_res == -1)
 	{
 	  nis_freeresult (result);
 	  result = saved_res;
@@ -358,7 +358,7 @@ _nss_nisplus_getservbyname_r (const char *name, const char *protocol,
       return NSS_STATUS_TRYAGAIN;
     }
 
-  if (__glibc_unlikely (niserr2nss (result->status) != NSS_STATUS_SUCCESS))
+  if (niserr2nss (result->status) != NSS_STATUS_SUCCESS)
     {
       enum nss_status status = niserr2nss (result->status);
 
@@ -372,7 +372,7 @@ _nss_nisplus_getservbyname_r (const char *name, const char *protocol,
 					      errnop);
   nis_freeresult (result);
 
-  if (__glibc_unlikely (parse_res < 1))
+  if (parse_res < 1)
     {
       if (parse_res == -1)
 	{
@@ -427,7 +427,7 @@ _nss_nisplus_getservbyport_r (const int number, const char *protocol,
       return NSS_STATUS_TRYAGAIN;
     }
 
-  if (__glibc_unlikely (niserr2nss (result->status) != NSS_STATUS_SUCCESS))
+  if (niserr2nss (result->status) != NSS_STATUS_SUCCESS)
     {
       enum nss_status status = niserr2nss (result->status);
 
@@ -441,7 +441,7 @@ _nss_nisplus_getservbyport_r (const int number, const char *protocol,
 					      errnop);
   nis_freeresult (result);
 
-  if (__glibc_unlikely (parse_res < 1))
+  if (parse_res < 1)
     {
       if (parse_res == -1)
 	{
